@@ -19,7 +19,13 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "Carp" => 0,
     "Convert::ASN1" => "0.27",
+    "Crypt::OpenSSL::DSA" => 0,
+    "Crypt::OpenSSL::RSA" => 0,
     "Crypt::PK::ECC" => 0,
+    "Digest::MD2" => 0,
+    "Digest::MD4" => 0,
+    "Digest::MD5" => 0,
+    "Digest::SHA" => 0,
     "Encode" => 0,
     "MIME::Base64" => 0,
     "Scalar::Util" => 0,
@@ -29,9 +35,6 @@ my %WriteMakefileArgs = (
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
-    "Crypt::OpenSSL::DSA" => 0,
-    "Crypt::OpenSSL::RSA" => 0,
-    "Digest::SHA" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Module::Signature" => 0,
@@ -51,6 +54,9 @@ my %FallbackPrereqs = (
   "Crypt::OpenSSL::DSA" => 0,
   "Crypt::OpenSSL::RSA" => 0,
   "Crypt::PK::ECC" => 0,
+  "Digest::MD2" => 0,
+  "Digest::MD4" => 0,
+  "Digest::MD5" => 0,
   "Digest::SHA" => 0,
   "Encode" => 0,
   "ExtUtils::MakeMaker" => 0,
