@@ -60,8 +60,9 @@ RELEASE NOTES
     to use, and does not require the application to navigate internal data
     structures.
 
-    Version 1.7 provides support for DSA and ECC public keys. It also
-    allows the caller to verify the signature of a CSR.
+    Version 1.7 provides support for DSA and ECC public keys. By default,
+    it verifies the signature of CSRs. It also allows the caller to verify
+    the signature of a CSR.
 
 INSTALLATION
 
@@ -76,11 +77,17 @@ REQUIRES
 
     Convert::ASN1
 
+    Crypt::OpenSSL::DSA
+
+    Crypt::OpenSSL::RSA
+
+    Crypt::PK::ECC
+
+    Digest::SHA
+
     For ECC: Crypt::PK::ECC
 
-    Tests also require Crypt::OpenSSL::DSA, Crypt::OpenSSL::RSA,
-    Crypt::PK::ECC, Digest::SHA. Note that these are useful for signature
-    verification; see the tests for code.
+    Very old CSRs may require DIGEST::MD{5,4,2}
 
 METHODS
 
@@ -167,6 +174,15 @@ METHODS
       are being displayed to a human.
 
       The default is true.
+
+    verifySignature
+
+      If true, the CSR's signature is checked. If verification fails, new
+      will fail.
+
+      If false, the CSR's signature is not checked.
+
+      The default is true for API version 1 and false for API version 0.
 
     No exceptions are generated.
 
@@ -475,6 +491,19 @@ METHODS
 
     Returns true otherwise.
 
+ checkSignature
+
+    Verifies the signature of a CSR. (Useful if new() specified
+    verifySignature => 0.)
+
+    Returns true if the signature is OK.
+
+    Returns false if the signature is incorrect. Crypt::PKCS10->error
+    returns the reason.
+
+    Returns undef if there was an error in the verification process (e.g. a
+    required Perl module could not be loaded.)
+
  certificateTemplate
 
     CertificateTemplate returns the certificateTemplate attribute.
@@ -687,6 +716,10 @@ CHANGES
        - Add signature(2) to extract ECDSA signature components.
     
        - Fix and extend registerOID, add tests.
+    
+       - Add examples/ directory with sample code
+    
+       - Verify signature of CSRs in new() by default.  Add checkSignature().
     
       
 
